--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Page Title</title>
+    <title>Jeff Winegar, Frontend Developer. Work &amp; Profile</title>
 
-    <meta name="description" content="">
+    <meta name="author" content="Jeff Winegar">
+    <meta name="url" content="http://jeffwinegar.com/">
+    <meta name="description" content="Profile and recent work">
+
     <!-- Removes auto phone number detection on iOS -->
     <meta name="format-detection" content="telephone=no">
 
@@ -18,54 +21,11 @@
   <body>
     <div class="sticky-footer-push">
       <header class="main-header" role="banner">
-        <button type="button" class="mobile-menu-button">
-            <span class="mobile-button-icon" aria-hidden="true"></span>
-        </button>
-        <div class="wrapper">
-          <nav class="site-menu" role="navigation" aria-label="Main menu">
-            <ul class="main-menu" role="menubar">
-              <li class="main-menu-item">
-                <a href="#" class="main-menu-link">Item 1</a>
-              </li>
-              <li class="main-menu-item">
-                <a href="#" class="main-menu-link">Item 2</a>
-              </li>
-              <li class="main-menu-item">
-                <a href="#" class="main-menu-link">Item 3</a>
-
-                <ul class="main-sub-menu">
-                  <li class="main-sub-menu-item">
-                    <a href="#" class="main-sub-menu-link">Sub-item 1</a>
-                  </li>
-                  <li class="main-sub-menu-item">
-                    <a href="#" class="main-sub-menu-link">Sub-item 2</a>
-                  </li>
-                  <li class="main-sub-menu-item">
-                    <a href="#" class="main-sub-menu-link">Sub-item 3</a>
-                  </li>
-                  <li class="main-sub-menu-item">
-                    <a href="#" class="main-sub-menu-link">Sub-item 4</a>
-                  </li>
-                  <li class="main-sub-menu-item">
-                    <a href="#" class="main-sub-menu-link">Sub-item 5</a>
-                  </li>
-                  <li class="main-sub-menu-item">
-                    <a href="#" class="main-sub-menu-link">Sub-item 6</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="main-menu-item">
-                <a href="#" class="main-menu-link">Item 4</a>
-              </li>
-              <li class="main-menu-item">
-                <a href="#" class="main-menu-link">Item 5</a>
-              </li>
-              <li class="main-menu-item">
-                <a href="#" class="main-menu-link">Item 6</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+        <h1>Jeff Winegar</h1>
+        <ul>
+          <li>Email: <a href="mailto:">email@info</a></li>
+          <li>Phone: <a href="tel:5178038401">517.803.8401</a></li>
+        </ul>
       </header>
       <main role="main">
         <div class="horizontal-scroll-menu">
@@ -171,7 +131,7 @@
     </div>
     <footer class="main-footer" role="contentinfo">
       <div class="wrapper">
-        <p>&copy;2016 InsideOut Design + Development</p>
+        <p>&copy;2016 Jeff Winegar. All rights reserved.</p>
       </div>
     </footer>
     <script src="js/main.js"></script>
