--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,10 @@
     <main role="main">
       <article class="intro" role="article">
         <section class="intro-excerpt">
-          <p>I'm Jeff, a UI designer<span class="slash-split">/</span> Frontend developer based in SoCal. <button class="intro-more-button">Learn More</button></p>
+          <p>I'm Jeff, a UI Designer<span class="slash-split">/</span> Frontend Developer based in SoCal. <button class="intro-more-button">Learn More</button></p>
         </section>
         <section class="intro-complete">
-          <p>I'm Jeff, a UI designer<span class="slash-split">/</span> Frontend developer based in SoCal. I specialize in user engagement. Through UX, UI, interaction, and product design and development, I focus on hand-crafted, fluidly responsive website development as well as web and app UI design. <button class="intro-less-button">Show Less</button></p>
+          <p>I'm Jeff, a UI Designer<span class="slash-split">/</span> Frontend Developer based in SoCal. I specialize in user engagement. Through UX, UI, interaction, and product design and development, I focus on hand-crafted, fluidly responsive website development as well as web and app UI design. <button class="intro-less-button">Show Less</button></p>
         </section>
       </article>
 
