adds lazy loading of images

--- a/public/index.html
+++ b/public/index.html
@@ -129,10 +129,16 @@
           </div>
           <div class="project-highlights">
             <div class="project-highlight-large project-v-suites-laptop">
-              <img class="project-highlight-image" src="./images/v-suites-laptop.jpg" alt="Person searching properties at v-suites.com on a laptop.">
+              <img class="project-highlight-image"
+                src="./images/v-suites-laptop-lr.jpg"
+                data-src="./images/v-suites-laptop.jpg"
+                alt="Person searching properties at v-suites.com on a laptop.">
             </div>
             <div class="project-highlight-medium project-v-suites-mobile">
-              <img class="project-highlight-image" src="./images/v-suites-mobile.jpg" alt="Person searching properties at v-suites.com on their phone.">
+              <img class="project-highlight-image"
+                src="./images/v-suites-mobile-lr.jpg"
+                data-src="./images/v-suites-mobile.jpg"
+                alt="Person searching properties at v-suites.com on their phone.">
             </div>
           </div>
         </div>
