--- a/public/index.html
+++ b/public/index.html
@@ -195,6 +195,15 @@
     <footer class="main-footer" role="contentinfo">
       <p>Copyright &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Jeff Winegar. All rights reserved.</p>
     </footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-93186602-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <script src="js/main.js"></script>
   </body>
 </html>
