updates applied storytelling with image

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
         </section>
       </article>
 
-      <article class="project project-appliedstorytelling" role="article">
+      <article class="project project-applied-storytelling" role="article">
         <section class="project-intro">
           <p><a href="http://appliedstorytelling.com/">Applied Storytelling</a> is a premier brand strategy firm that uses an inspired, story-based approach to branding.</p>
         </section>
@@ -94,6 +94,14 @@
                 <p><a href="http://appliedstorytelling.com/">Applied Storytelling</a> is a branding firm with an approach that combines storytelling techniques from the world’s great narrative traditions with an ongoing study of marketplace dynamics. They help clients achieve their business objectives through strengthening their connection with their audience. The goal for this project was to create an elegent marketing site that was strongly content focused. The client wanted a minimilistic, modern looking site with their messaging front and center.</p>
               </span>
             </section>
+          </div>
+          <div class="project-highlights">
+            <div class="project-highlight-large project-applied-storytelling-laptop">
+              <img class="project-highlight-image"
+                src="./images/applied-storytelling-laptop-lr.jpg"
+                data-src="./images/applied-storytelling-laptop.jpg"
+                alt="Laptop on desk with Applied Storytelling blog on the screen.">
+            </div>
           </div>
         </div>
       </article>
