--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
     </footer>
     <!-- Async Load Google Webfonts https://github.com/typekit/webfontloader -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script>WebFont.load({google:{families:['Roboto','Abril+Fatface']}});</script>
+    <script>WebFont.load({google:{families:['Work+Sans','Abril+Fatface']}});</script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
