adjustments due to font change

--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
     </header>
 
     <footer class="main-footer" role="contentinfo">
-      <p>Copyright &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Jeff Winegar. All rights reserved.</p>
+      <p>&copy; <script>document.write(new Date().getFullYear());</script> Jeff Winegar. All rights reserved.</p>
     </footer>
     <!-- Async Load Google Webfonts https://github.com/typekit/webfontloader -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
