--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,29 @@
         </div>
       </article>
 
+      <article class="project additional-projects" role="article">
+        <section class="project-intro">
+          <p>Some additional projects.</p>
+        </section>
+        <div class="project-content">
+          <div class="project-overview">
+            <section class="project-details">
+              <span class="project-detail">
+                <p>A collection of some previous projects involving branding, mobile and site UI design, and front end development, with clients such as Detroit Innovation District, <a href="http://visitdetroit.com/">The Detroit Metro Convention &amp; Visitors Bureau</a>, <a href="http://downtowndetroit.org/">Downtown Detroit Partnership</a>, <a href="https://mobilebenefitspassport.com/">Mobile Benefits Passport</a>, and <a href="http://veebit.com/">Veebit</a>.</p>
+              </span>
+            </section>
+          </div>
+          <div class="project-highlights">
+            <div class="project-highlight-small">
+              <img class="project-highlight-image"
+                src="./images/secondkit-logo-lr.jpg"
+                data-src="./images/secondkit-logo.jpg"
+                alt="">
+            </div>
+          </div>
+        </div>
+      </article>
+
       <article class="outro" role="article">
         <section>
           <p>Thank you for visiting. I am currently available for full-time, contract, or consulting opportunities. If you would like to discuss more, share feedback, or ask any questions, please get in touch.</p>
@@ -202,6 +225,7 @@
     <!-- Async Load Google Webfonts https://github.com/typekit/webfontloader -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>WebFont.load({google:{families:['Work+Sans','Abril+Fatface']}});</script>
+    <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -211,6 +235,7 @@
       ga('create', 'UA-93186602-1', 'auto');
       ga('send', 'pageview');
     </script>
+    <!-- Main site JS -->
     <script src="js/main.js"></script>
   </body>
 </html>
