added projects to additional section

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <ul class="connect">
         <li>
           <span class="connect-label">Email: </span>
-          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;">
+          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">
             <span class="connect-short-link">Email</span>
             <span class="connect-full-link">&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;</span>
           </a>
@@ -150,22 +150,39 @@
 
       <article class="project additional-projects" role="article">
         <section class="project-intro">
-          <p>Some additional projects.</p>
+          <p>Additional projects.</p>
         </section>
         <div class="project-content">
           <div class="project-overview">
             <section class="project-details">
               <span class="project-detail">
-                <p>A collection of some previous projects involving branding, mobile and site UI design, and front end development, with clients such as Detroit Innovation District, <a href="http://visitdetroit.com/">The Detroit Metro Convention &amp; Visitors Bureau</a>, <a href="http://downtowndetroit.org/">Downtown Detroit Partnership</a>, <a href="https://mobilebenefitspassport.com/">Mobile Benefits Passport</a>, and <a href="http://veebit.com/">Veebit</a>.</p>
+                <p>A collection of projects involving branding, mobile and site UI design, and front end development. Some clients include: The Detroit Innovation District, <a href="http://visitdetroit.com/">The Detroit Metro Convention &amp; Visitors Bureau</a>, <a href="http://downtowndetroit.org/">Downtown Detroit Partnership</a>, <a href="https://liparifoods.com/">Lipari Foods</a>, <a href="http://mobilizeweb.com/">MobilizeWeb</a>, and <a href="http://veebit.com/">Veebit</a>.</p>
               </span>
             </section>
           </div>
           <div class="project-highlights">
-            <div class="project-highlight-small">
+            <div class="project-highlight-small project-mbp">
+              <span class="project-highlight-image-offset">
+                <img class="project-highlight-image"
+                  src="./images/MBP-mockup-lr.png"
+                  data-src="./images/MBP-mockup.png"
+                  alt="Mockup of Mobile Benefits Passport showing screens ">
+              </span>
+              <span class="project-highlight-copy">
+                <h4 class="project-highlight-title">Mobile Benefits Passport</h4>
+                <p>Redesign of mobile app based off of user needs and requests. Mobile Benefits Passport allows you to view your company’s benefit summaries, quick access to carrier contact information, and real time notifications uploaded by your company. It is availible in the App Store and Google Play.</p>
+              </span>
+            </div>
+
+            <div class="project-highlight-small project-secondkit">
               <img class="project-highlight-image"
                 src="./images/secondkit-logo-lr.jpg"
                 data-src="./images/secondkit-logo.jpg"
-                alt="">
+                alt="Logo for Second Kit">
+              <span class="project-highlight-copy">
+                <h4 class="project-highlight-title">Secondkit</h4>
+                <p>Identity, web design, and frontend development project for a startup company offering management and shipping to destinations of exercise gear and equipment for traveling professionals.</p>
+              </span>
             </div>
           </div>
         </div>
@@ -173,7 +190,7 @@
 
       <article class="outro" role="article">
         <section>
-          <p>Thank you for visiting. I am currently available for full-time, contract, or consulting opportunities. If you would like to discuss more, share feedback, or ask any questions, please get in touch.</p>
+          <p>Thank you for visiting. I am currently available for full-time, contract, or consulting opportunities. To discuss more, share feedback, or ask any questions, please <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">get in touch</a>.</p>
         </section>
       </article>
     </main>
@@ -183,7 +200,7 @@
       <ul class="connect">
         <li>
           <span class="connect-label">Email: </span>
-          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;">
+          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">
             <span class="connect-short-link">Email</span>
             <span class="connect-full-link">&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;</span>
           </a>
