adds links to V-Suites website

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 
       <article class="project project-v-suites" role="article">
         <section class="project-intro">
-          <p>V-Suites is a national corporate housing company that offers renters luxurious, furnished, short-term housing options.</p>
+          <p><a href="http://v-suites.com/">V-Suites</a> is a national corporate housing company that offers renters luxurious, furnished, short-term housing options.</p>
         </section>
         <div class="project-content">
           <div class="project-overview">
@@ -123,11 +123,11 @@
               </span>
               <span class="project-detail">
                 <span class="project-detail-label">Website:</span>
-                <p><em>Coming Soon</em></p>
+                <p><a href="http://v-suites.com/">v-suites.com</a></p>
               </span>
               <span class="project-detail">
                 <span class="project-detail-label">Description:</span>
-                <p>Located in 35 states across the nation and connected to a property management company, V-Suites is an award winning corporate housing company providing their guests with a specialized housing experience, unseen anywhere else in the travel industry. For this project I was tasked with the UI design from comps provided by a partner design firm as well as frontend intigration into Wordpress.</p>
+                <p>Located in 35 states across the nation and connected to a property management company, <a href="http://v-suites.com/">V-Suites</a> is an award winning corporate housing company providing their guests with a specialized housing experience, unseen anywhere else in the travel industry. For this project I was tasked with the UI design from comps provided by a partner design firm as well as frontend intigration into Wordpress.</p>
               </span>
             </section>
           </div>
