adds projects to additional section

--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,42 @@
                 alt="Logo for Second Kit">
               <span class="project-highlight-copy">
                 <h4 class="project-highlight-title">Secondkit</h4>
-                <p>Identity, web design, and frontend development project for a startup company offering management and shipping to destinations of exercise gear and equipment for traveling professionals.</p>
+                <p>Identity, web design, and front end development project for a startup company offering management and shipping to destinations of exercise gear and equipment for traveling professionals.</p>
+              </span>
+            </div>
+
+            <div class="project-highlight-large project-did">
+              <img class="project-highlight-image"
+                src="./images/did-screenshot-lr.jpg"
+                data-src="./images/did-screenshot.jpg"
+                alt="Screenshot of Detroit Innovation District about page.">
+              <span class="project-highlight-copy">
+                <h4 class="project-highlight-title">Detroit Innovation District</h4>
+                <p>Fluidly responsive custom built Wordpress theme. The DID has created a series of focused initiatives that will generate near-term results, which can scale and spread, and demonstrate the power of linking place-based initiatives to broader, community-based needs.</p>
+              </span>
+            </div>
+
+            <div class="project-highlight-small project-fashion">
+              <img class="project-highlight-image"
+                src="./images/fashion-decade-logo-lr.jpg"
+                data-src="./images/fashion-decade-logo.jpg"
+                alt="Fashion by the Decade logo for the Detroit Institute of Arts used for an online photo-sharing gallery.">
+              <span class="project-highlight-copy">
+                <h4 class="project-highlight-title">Detroit Institute of Arts</h4>
+                <p>Logo design for Detroit Institute of Arts. Fashion by the Decade was an online photo-sharing gallery organized by the DIA to coincide with the exhibition Avedon Fashion Photographs 1944 – 2000, on view October 18, 2009 – January 17, 2010.</p>
+              </span>
+            </div>
+
+            <div class="project-highlight-medium project-lipari">
+              <span class="project-highlight-image-offset">
+                <img class="project-highlight-image"
+                  src="./images/lipari-ipad-mini-lr.png"
+                  data-src="./images/lipari-ipad-mini.png"
+                  alt="iPad mini displaying Lipari Foods landing page.">
+              </span>
+              <span class="project-highlight-copy">
+                <h4 class="project-highlight-title">Lipari Foods</h4>
+                <p>Fluidly responsive custom built Wordpress theme with full inventory search. Covering 12 states and more than 8,000 customers, Lipari Foods is a food distributor in the midwest that helps customers discover products that shoppers love.</p>
               </span>
             </div>
           </div>
