updates contact changes

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <ul class="connect">
         <li>
           <span class="connect-label">Email: </span>
-          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">
+          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;?subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">
             <span class="connect-short-link">Email</span>
             <span class="connect-full-link">&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;</span>
           </a>
@@ -38,16 +38,16 @@
         </li>
         <li>
           <span class="connect-label">Twitter: </span>
-          <a href="https://twitter.com/winoj">
+          <a href="https://twitter.com/jeff_winegar">
             <span class="connect-short-link">Twitter</span>
-            <span class="connect-full-link">twitter.com/winoj</span>
+            <span class="connect-full-link">twitter.com/jeff_winegar</span>
           </a>
         </li>
         <li>
           <span class="connect-label">Codepen: </span>
-          <a href="http://codepen.io/winegarj/">
+          <a href="http://codepen.io/jeff_winegar">
             <span class="connect-short-link">Codepen</span>
-            <span class="connect-full-link">codepen.io/winegarj</span>
+            <span class="connect-full-link">codepen.io/jeff_winegar</span>
           </a>
         </li>
         <li>
@@ -225,7 +225,7 @@
 
       <article class="outro" role="article">
         <section>
-          <p>Thank you for visiting. I am currently available for full-time, contract, or consulting opportunities. To discuss more, share feedback, or ask any questions, please <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">get in touch</a>.</p>
+          <p>Thank you for visiting. I am currently available for full-time, contract, or consulting opportunities. To discuss more, share feedback, or ask any questions, please <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109?&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">get in touch</a>.</p>
         </section>
       </article>
     </main>
@@ -235,7 +235,7 @@
       <ul class="connect">
         <li>
           <span class="connect-label">Email: </span>
-          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;&subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">
+          <a href="mailto:&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;?subject=Question%20about%20your%20work%20/%20Quote%20request%20/%20Work%20proposal&body=Hello%20Jeff,%0D%0A%20">
             <span class="connect-short-link">Email</span>
             <span class="connect-full-link">&#106;&#101;&#102;&#102;&#064;&#106;&#101;&#102;&#102;&#119;&#105;&#110;&#101;&#103;&#097;&#114;&#046;&#099;&#111;&#109;</span>
           </a>
@@ -249,16 +249,16 @@
         </li>
         <li>
           <span class="connect-label">Twitter: </span>
-          <a href="https://twitter.com/winoj">
+          <a href="https://twitter.com/jeff_winegar">
             <span class="connect-short-link">Twitter</span>
-            <span class="connect-full-link">twitter.com/winoj</span>
+            <span class="connect-full-link">twitter.com/jeff_winegar</span>
           </a>
         </li>
         <li>
           <span class="connect-label">Codepen: </span>
-          <a href="http://codepen.io/winegarj/">
+          <a href="http://codepen.io/jeff_winegar">
             <span class="connect-short-link">Codepen</span>
-            <span class="connect-full-link">codepen.io/winegarj</span>
+            <span class="connect-full-link">codepen.io/jeff_winegar</span>
           </a>
         </li>
         <li>
